@@ -1,4 +1,6 @@
-Changed the burner to explicitly indicate when heating and cooling are disallowed by modifying the slider on the heater/cooler.
+2nd tab: Added the ability to activate and deactivate elements of the energy systems as they move into or out of the 'focus' location on the carousel.
+2nd tab: Added working faucet.
+1st tab: Changed the burner to explicitly indicate when heating and cooling are disallowed by modifying the slider on the heater/cooler.
 # 0.00.15 (66196) Jul 24, 2012
 7/24/12 Publishing some fixes for the Heat Capacity Lab prototype.
 Added a fix for an issue where blocks and beakers could be made to overlap if the user dropped the block on the edge of the burner.
